final (with btn load more)

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     </div>
 
     <button type="button" class="load-more">Load more</button>
+    <!-- <div class="js-search"></div> -->
 
     <script src="index.js" type="module"></script>
   </body>
